# fastapi-spacex-app

./: .gitignore  Dockerfile  README.md  apiservice.py  docker-compose.yml  main.py  models.py  pyproject.toml  timeservice.py
